--- a/INSTALL
+++ b/INSTALL
@@ -1,6 +1,5 @@
 Installing trytond_account_ucoa
 =============================
-
 Prerequisites
 -------------
 
@@ -10,21 +9,6 @@ Prerequisites
 
 Installation
 ------------
+Extract the archive into 'trytond/modules' with the directory name account_ucoa.
+Restart trytond, and enable module via Tryton client.
 
-Once you've downloaded and unpacked the trytond_account_ucoa source release, enter the
-directory where the archive was unpacked, and run:
-
-    python setup.py install
-
-Note that you may need administrator/root privileges for this step, as
-this command will by default attempt to install module to the Python
-site-packages directory on your system.
-
-For advanced options, please refer to the easy_install and/or the distutils
-documentation:
-
-  http://peak.telecommunity.com/DevCenter/EasyInstall
-  http://docs.python.org/inst/inst.html
-
-To use without installation, extract the archive into ``trytond/modules`` with
-the directory name account_ucoa.
