corrected installation instructions (simply extracting/copying doesn't seem to be sufficient, while setup.py works well, at least under Ubuntu 10.04)

--- a/INSTALL
+++ b/INSTALL
@@ -9,6 +9,6 @@ Prerequisites
 
 Installation
 ------------
-Extract the archive into 'trytond/modules' with the directory name account_ucoa.
+Extract the archive and run 'python setup.py install' (may need root privileges).
 Restart trytond, and enable module via Tryton client.
 
